[package]
name = "yew-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
yew = "0.18.0"
css-in-rust = {git = "https://github.com/media-io/css-in-rust", branch = "master", features = ["yew_integration"]}
